--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
+    <title>NDIO Customs | Linktree</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
+    <link rel="icon" href="./images/logo.png" type="image/x-icon" />
     <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"> -->
+    <link href="./assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+    <link href="./assets/fontawesome/css/solid.min.css" rel="stylesheet">
+    <link href="./assets/fontawesome/css/brands.css" rel="stylesheet">
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
@@ -22,14 +25,14 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+      <img src="./images/logo.png" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+          <a href="./images/logo.png" target="_blank">
+            <img src="./images/logo.png" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
@@ -40,32 +43,36 @@
     </div>
 
     <div id="userName">
-      @johnggli
+      @ndiocustoms
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/johnggli" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
+      <a class="link" href="https://ndiocustoms.com" target="_blank">
+        <!-- <i class="fa-solid fa-browser">&nbsp;</i>Website -->
+        <!-- <i class="fa-brands fa-aws"></i>Website -->
+        <!-- <i class="fa-globe"></i>Website -->
+        <i class="fa-solid fa-earth-americas">&nbsp;</i>Website
       </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
+      <!-- <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
-      </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
+      </a> -->
+      <!-- <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
         <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
+      </a> -->
+      <a class="link" href="https://www.instagram.com/ndiocustoms" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
+      <!-- <a class="link" href="https://twitter.com/johnggli" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
+      </a> -->
+      <a class="link" href="tel:289-536-3658" target="_blank">
+        <i class="fa-solid fa-phone">&nbsp;</i>Call or Text
+        <i class="fa-solid fa-comment-sms">&nbsp;</i>
       </a>
     </div>
 
     <div id="hashtag">
-      #BeHappy❤
+      #artontwowheels❤
     </div>
   </body>
 </html>
