Add more font-awesome

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>NDIO Customs | Linktree</title>
     <!-- Favicon -->
     <link rel="icon" href="./images/logo.png" type="image/x-icon" />
+    <!-- Link setup -->
+    <link rel="canonical" href="https://ndiocustoms.github.io/links/" />
     <!-- Font Awesome icons -->
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"> -->
     <link href="./assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
     <link href="./assets/fontawesome/css/solid.min.css" rel="stylesheet">
     <link href="./assets/fontawesome/css/brands.css" rel="stylesheet">
