Update popup caption

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </a>
         </div>
         <div class="popup-quote">
-          But... the sensation that I've lost something lingers for a longtime after I wake up.
+          Parts of your true will and essence will be expressed in your personalized ride.
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
